# optical-bandgap-tauc

./: .gitignore  LICENSE  README.md  pyproject.toml
src/optical_bandgap_tauc/: __init__.py  cli.py  edge_detection.py  fitting.py  io.py  kubelka_munk.py  plotting.py  reporting.py  tauc.py
tests/: test_cli_integration.py  test_edge_detection.py  test_fitting.py  test_kubelka_munk.py
